# Frcobot_ROS_WS

./: .gitignore  API说明.md  README.md  frames.gv
data/: Fitting.py  trajectory_output.csv
devel/: .catkin  local_setup.sh
devel/include/fr5_moveit_config/: GoToPose.h  GoToPoseRequest.h  GoToPoseResponse.h
devel/lib/frcobot_camera/: binpicking  eyeinhand
devel/lib/frcobot_gripper/: gripper_plugin_test
devel/lib/frcobot_hw/: frcobot_cmd_demo  frcobot_status_node
devel/lib/pkgconfig/: fr5_moveit_config.pc  fr5v6_moveit_config.pc  frcobot_camera.pc  frcobot_gripper.pc  frcobot_hw.pc  ros_control_boilerplate.pc
devel/lib/ros_control_boilerplate/: frrobot_hw_main  keyboard_teleop  sim_hw_main  test_trajectory
devel/share/fr5_moveit_config/cmake/: fr5_moveit_config-msg-extras.cmake  fr5_moveit_config-msg-paths.cmake  fr5_moveit_configConfig.cmake
devel/share/frcobot_hw/cmake/: frcobot_hwConfig.cmake  (+1 more)
src/fr5_moveit_config/: CMakeLists.txt  README.md  package.xml
src/fr5_moveit_config/launch/: moveit.rviz
src/fr5_moveit_config/scripts/: __init__.py  demo.md  demo.py  joint_motion.py  moveToTopClient.py  moveToTopServer.py  move_group_python_interface_tutorial.py  move_group_test.py  points_position_get.py  pose_client.py  pose_service.py
src/fr5_moveit_config/scripts/moveit_utils/: __init__.py  my_move_group.py  utils.py
src/fr5_moveit_config/srv/: GoToPose.srv
src/frcobot_camera/launch/: frcobot_binpicking.launch  frcobot_eyeinhand.launch
src/frcobot_description/urdf/: fr5_robot.urdf
src/frcobot_gripper/src/: gripper_io_pad.cpp
src/frcobot_hw/: readme.md
src/frcobot_hw/launch/: frcobot_hw.launch
src/frcobot_hw/src/: frcobot_cmd_demo.cpp
src/ros_control_boilerplate/: README.md
(+21 files in other folders)
